--- a/code/makefile
+++ b/code/makefile
@@ -1,4 +1,13 @@
-OBJ = graphics.o sound.o scenemanager.o keybindings.o main.o texture.o scene_00_startup.o scene_01_main_menu.o scene_02_horde_loot.o scene_99_exit.o
+OBJ = graphics.o \
+sound.o \
+scenemanager.o \
+keybindings.o \
+main.o \
+texture.o \
+scene_00_startup.o \
+scene_01_main_menu.o \
+scene_02_horde_loot.o \
+scene_99_exit.o
 CPP_FLAGS = -std=c++11 -Wall
 LINK_ALL_SDL2 = -lSDL2main -lSDL2 -lSDL2_image -lSDL2_mixer -lSDL2_ttf
 
