macro build dir

--- a/code/makefile
+++ b/code/makefile
@@ -1,9 +1,9 @@
-#BUILD_DIR = build/
+BUILD_DIR = build/
 CFLAGS = -std=c++11 -Wall
 LINK_ALL_SDL2 = -lSDL2main -lSDL2 -lSDL2_image -lSDL2_mixer -lSDL2_ttf
 SRC = $(wildcard *.cpp)
 O = $(addsuffix .o,$(basename $(SRC)))
-OBJ = $(addprefix build/, $(O))
+OBJ = $(addprefix $(BUILD_DIR), $(O))
 
 ../plunder: $(OBJ)
 	g++ -o ../plunder $(OBJ) $(LINK_ALL_SDL2) 
@@ -11,7 +11,7 @@ OBJ = $(addprefix build/, $(O))
 clean:
 	-rm $(OBJ)
 	
-build/%.o: %.cpp
+$(BUILD_DIR)%.o: %.cpp
 	g++ -c -o $@ $< $(CFLAGS) $(LINK_ALL_SDL2)
 
 .PHONY: clean
